src/css/custom/index.less
/* ... */
[data-theme='light'] .secondary-nav--items .navbar__link {
  color: rgb(100, 100, 100);
  font-weight: 600;
}

[data-theme='dark'] .secondary-nav--items .navbar__link {
  font-weight: 600;
}

.dropdown {
  & > .navbar__link:after {
    border: none;
    background: var(--ifm-menu-link-sublist-icon);
    background-position: center;
    transform: rotate(180deg);
    height: var(--default-line-height);
    width: var(--default-line-height);
    top: initial;
    margin-left: 0px;
  }

  .dropdown__link {
    border-radius: 0;
    margin: 0;
  }
}

hr {
  margin-top: 48px;
  margin-bottom: 0.5rem;
}

.markdown {
  table {
    border-radius: 4px;

    thead tr {
      border: 0;
    }

    tbody {
      border-radius: 4px;
    }
  }

  & > h2 {
    margin-top: 32px;
    padding-top: 32px;
    margin-bottom: 12px;
    --ifm-h2-font-size: 1.25rem !important;
    font-weight: 700;
    line-height: 24px;
    border-top: 1px solid var(--click-color-stroke);
  }

  h1 {
    --ifm-h1-font-size: 1.75rem !important;
    font-weight: 700;
    line-height: 34px;
  }

  h3 {
    --ifm-h3-font-size: 1rem !important;
    line-height: 24px;
    font-weight: 600;
  }

  details {
    h1,
    h2,
    h3 {
      color: var(--click-color-text-inverse);
    }
  }
}

.main-content-wrapper {
  height: 100%;
  margin-top: 2rem;

  .row {
    height: 100%;
  }
}

button.DocSearch {
  width: 100%;
  border-radius: 4px;

  font-weight: 400;
  font-size: 14px;
  line-height: 21px;
}

.footer__links {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  margin: 0;
  gap: 1rem;
  color: inherit;
  font-size: inherit;
}

.footer__link-separator {
  display: none;
}

.dropdown__menu {
  padding: 0;
}

.DocSearch-Search-Icon {
  height: 14px;
  width: 14px;
}

.DocSearch-Button-Keys,
.DocSearch-Button-Placeholder {
  display: block;
}

.theme-admonition-tip {
  &.alert--warning {
    .alert-icon {
      background: var(--click-color-warning-text);
    }

    .alert-content {
      background: var(--click-color-warning-background);
    }
  }

  &.alert--danger {
    .alert-icon {
      background: var(--click-color-danger-text);
    }

    .alert-content {
      background: var(--click-color-danger-background);
    }
  }

  &.alert--info {
    .alert-icon {
      background: var(--click-color-info-text);
    }

    .alert-content {
      background: var(--click-color-info-background);
    }
  }

  &.alert--success {
    .alert-icon {
      background: var(--click-color-success-text);
    }

    .alert-content {
      background: var(--click-color-success-background);
    }
  }
}

.footer__link-item {
  line-height: inherit;
  color: var(--docsearch-muted-color);
}

.navbar__toggle {
  margin: 0;
}

[data-theme='light'] .navbar__link:hover {
  color: black;
}

[data-theme='light'] .navbar__link--active {
  color: black !important;
}

[data-theme='light'] .logo-color {
  fill: black;
}

[data-theme='dark'] .logo-color {
  fill: white;
}

// -- custom --

/** global */

html {
  font-size: 16px;
}

html[data-theme='dark'] {
  background: var(--click-color-background);
  background-attachment: fixed;
}

// 设定全局字体大小为14px
body {
  font-size: var(--default-font);
  line-height: var(--default-line-height);
  font-family: var(--ifm-font-family-base), -apple-system, BlinkMacSystemFont,
    'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
    'Segoe UI Emoji', 'Segoe UI Symbol';
  overflow-x: hidden;
  height: auto !important;
}

[data-theme='dark'] .navbar {
  background: rgba(36, 37, 38, 0.55);
}

.navbar {
  background: rgba(255, 255, 255, 0.75);
  backdrop-filter: blur(12px);

  .navbar-sidebar {
    background: inherit;
    z-index: 11;
  }

  // 切换主题，防止抖动
  .navbar__logo {
    width: 63px;
  }

  .navbar__search {
    margin-left: 0;
  }
}

img {
  height: auto;
  max-width: 100%;
}

.container {
  width: auto;
  max-width: none !important;
  min-width: none !important;
}

.footer {
  background-color: var(--ifm-footer-background-color2);
  z-index: 1;
  overflow: hidden;
  padding-left: 0;
  padding-right: 0;

  .footer__col {
    .footer__title {
      font-weight: 500;
      font-size: 2em;
      margin-bottom: 35px;
      text-align: center;
    }
  }

  .subscribe-box {
    position: relative;
    text-align: center;

    // 排列
    a {
      position: relative;
      width: 300px;
      text-align: center;
      font-weight: bold;
      border-radius: 8px;
      border: none;
      transition: all 0.3s ease-in-out;
      margin-right: 1rem;
      margin-bottom: 1rem;
      background-color: var(--ifm-footer-link-item-background-color) !important;
      border-color: var(--ifm-footer-link-item-background-color) !important;
      color: var(--click-color-text) !important;
      font-size: 16px;
      box-shadow: unset !important;

      .fa {
        margin-right: 4px;
      }
    }

    // 显示wechat
    a:hover .wechat-dropdown {
      display: block;
    }

    // wechat样式
    .wechat-dropdown {
      background-color: #fff;
      border-radius: 10px;
      box-shadow: 0 6px 16px #ffffff1a;
      display: none;
      height: 8.75rem;
      padding: 0.625rem;
      position: absolute;
      left: calc(50% - 70px);
      top: 45px;
      width: 8.75rem;
      z-index: 2;
      transition: all 0.25s ease-in-out;

      &::before {
        border: 0.5rem solid #0000;
        border-bottom: 0.5rem solid #fff;
        content: '';
        display: block;
        position: absolute;
        right: 3.625rem;
        top: -1rem;
      }
    }
  }

  // apache logo
  .footerLogoLink {
    opacity: 0.5;
    transition: opacity var(--ifm-transition-fast)
      var(--ifm-transition-timing-default);

    &:hover {
      opacity: 1;
    }
  }

  .footer__copyright {
    font-size: 0.8rem;
  }

  .footer__logo {
    content: url('/image/asf_logo.svg');
    display: inline-block;
    width: 300px;
  }
}
/* ... */

